<resources>
    <string name="facebook_app_id">1623122387734830</string>
    <string name="fb_login_protocol_scheme">fb1623122387734830</string>

    <string name="app_name">LazadaApp</string>
    <string name="str_bag">thế giới mua sắm trong tầm tay bạn</string>
    <string name="str_iconmoney">giao hàng tận nơi thanh toán dễ dàng</string>
    <string name="str_iconsercurity">cam kết 100% bảo vệ người tiêu dùng</string>
    <string name="str_btn_search">tìm kiếm trên lazada</string>
    <string name="open">Mở</string>
    <string name="close">Đóng</string>
    <string name="email">Email</string>
    <string name="pass">Mật khẩu</string>
    <string name="forget">Quên mật khẩu?</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="or_login">Hoặc đăng nhập bằng</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login_label">Đăng nhập/Đăng ký</string>

</resources>
