<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.quoctuan.lazadaapp.customview.ClearEditText
            android:id="@+id/edit_email"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            tools:ignore="TextFields" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.quoctuan.lazadaapp.customview.PasswordEditText
            android:id="@+id/edit_pass"
            android:hint="@string/pass"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:useStrike="true"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/text_forget"
        android:gravity="right"
        android:layout_margin="10dp"
        android:text="@string/forget"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_margin="10dp"
        android:id="@+id/btn_sign_in"
        android:background="@color/bgLogo"
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/or_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_facebook"
            android:layout_margin="10dp"
            android:background="@drawable/custom_facebook"
            android:textColor="@color/facebook"
            android:text="@string/facebook"
            android:drawableLeft="@drawable/facebookiconsmall"
            android:drawableStart="@drawable/facebookiconsmall"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btn_google"
            android:layout_margin="10dp"
            android:background="@drawable/custom_google"
            android:textColor="@color/google"
            android:text="@string/google"
            android:drawableLeft="@drawable/googleplussmall"
            android:drawableStart="@drawable/googleplussmall"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>